cocos2d-x-3.3??      ??
    [NEW]           ActionManager: added removeAllActionsByTag()
    [NEW]           GLViewProtocol: added getAllTouches()
    [NEW]           Node: added stopAllActionsByTag()
    [NEW]           Renderer: added TriangleCommand
    [NEW]           UI: added `WebView` on iOS and Android
    
    [FIX]           EditBox: moved to ui:EditBox
    [FIX]           HttpClient: condition variable sleep on unrelated mutex
    [FIX]           Node: create unneeded temple `Vec2` object in `setPosition(int, int)`, `setPositionX()` and `setPositionY()`
    [FIX]           Node: skew effect is wrong
    [FIX]           Node: setNormalizedPosition can not take effect if parent position is not changed
    [FIX]           TextureAtlas: may crash if only drawing part of it

cocos2d-x-3.3alpha0  Aug.28 2014
    [NEW]           3D: Added Camera, AABB, OBB and Ray
    [NEW]           3D: Added better reskin model support 
    [NEW]           Core: c++11 random support
    [NEW]	        Core: Using `(std::notrow)` for all the `new` statements
    [NEW]           Desktop: Added support for applicationDidEnterBackground / applicationWillEnterForeground on desktop
    [NEW]           Device: added setKeepScreenOn() for iOS and Android
    [NEW]           EventMouse: support getDelta, getDeltaX, getDeltaY functions
    [NEW]           FileUtils: add isDirectoryExist(), createDirectory(), removeDirectory(), removeFile(), renameFile(), getFileSize()
    [NEW]           FileUtilsApple: allow setting bundle to use in file utils on iOS and Mac OS X
    [NEW]           Image: support of software PVRTC v1 decompression
    [NEW]           Lua-binding: added release_print that can print log even in release mode
    [NEW]           Physics Integration: can invoke update in demand
    [NEW]           Renderer: Added primitive and render primitive command, support passing point, line and triangle data